# ProjektProgramowanie_WSTI

./: Bin.cpp  Bin.h  CMakeLists.txt  Client.cpp  Client.h  ClientManager.cpp  ClientManager.h  CompanyManagementProgram.cpp  CompanyManagementProgram.h  Department.cpp  Department.h  Employee.cpp  Employee.h  EmployeeManager.cpp  EmployeeManager.h  FileManager.cpp  FileManager.h  FinanceDepartment.cpp  FinanceDepartment.h  HRDepartment.cpp  HRDepartment.h  ITDepartment.cpp  ITDepartment.h  MarketingDepartment.cpp  MarketingDepartment.h  Person.cpp  Person.h  User.h  UserManager.cpp  UserManager.h  main.cpp
